cmake_minimum_required(VERSION 3.20)

set(SIM_SOURCES
	"simcollision/collisionanalyser.cpp"
	"simcollision/collisionanalyserdata.cpp"
	"simcollision/collisionanalyserdataUID.cpp"
	"simcollision/collisionanalyserevent.cpp"
	"simcollision/collisionanalyserinfo.cpp"
	"simcollision/collisionanalysertranslator.cpp"
	"simcollision/collision.cpp"
	"simcollision/collisiondetector.cpp"
	"simcollision/collisiondisplay.cpp"
	"simcollision/collisionmanager.cpp"
	"simcollision/collisionobject.cpp"
	"simcollision/collisionvolume.cpp"
	"simcollision/impulsebasedcollisionsolver.cpp"
	"simcollision/proximitydetection.cpp"
	"simcollision/subcollisiondetector.cpp"
	"simcommon/arraymath.cpp"
	"simcommon/dline2.cpp"
	"simcommon/impulselink.cpp"
	"simcommon/kalmann.cpp"
	"simcommon/largesymmetricmatrix.cpp"
	"simcommon/physicsproperties.cpp"
	"simcommon/sbmatrix.cpp"
	"simcommon/simconstraint.cpp"
	"simcommon/simenvironment.cpp"
	"simcommon/simmath.cpp"
	"simcommon/simstatearticulated.cpp"
	"simcommon/simstate.cpp"
	"simcommon/simstateflexible.cpp"
	"simcommon/simstatetarget.cpp"
	"simcommon/simtarget.cpp"
	"simcommon/simulatedobject.cpp"
	"simcommon/simutility.cpp"
	"simcommon/skeletoninfo.cpp"
	"simcommon/symmatrix.cpp"
	"simcommon/tlist.cpp"
	"simcommon/trackerjointmodifier.cpp"
	"simcommon/trajectoryextrapolator.cpp"
	"simphysics/articulatedphysicsobject.cpp"
	"simphysics/physicsjoint.cpp"
	"simphysics/physicsobject.cpp"
	"simphysics/restingdetector.cpp"
	"simphysics/virtualcm.cpp"
)

add_library(sim STATIC ${SIM_SOURCES})
target_include_directories(sim
	PUBLIC "."
)
target_link_libraries(sim
	p3d
	poser
)
